Tue Apr 10 00:41:03 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, configure.in, gnubg.c, gnubgmodule.c, gtkgame.c,
	gtkgame.h, gtkwindows.c, show.c, doc/.cvsignore: cleanup of the main
	function. Fix problem with error messages during startup. Postpone
	efectuation of -p and -c options so that they may be used under gtk.
	Fix problem with readline not being detected under redhat.

Sun Apr  8 18:44:45 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* analysis.c, eval.c, eval.h, external.c, format.c, format.h, gnubg.c,
	gnubgmodule.c, gtkcube.c, gtkwindows.c, html.c, latex.c, makebearoff.c,
	play.c, postscript.c, progress.c, rollout.c, set.c, sgf.c, show.c, text.c:
	icc compiler fixes

Sun Apr  8 13:40:34 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, eval.c, eval.h, gnubg.c, gtkgame.c, gtkrace.c, gtkrace.h,
	gtktoolbar.c, show.c: race theory update and simplification of analyse
	menu.

Wed Apr  4 00:07:07 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* bearoff.c: fix the fnd function, which was messed up by a typecast.

Thu Mar 29 17:57:17 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* board3d/Makefile.am: fix --without-board3d

Thu Mar 29 09:51:40 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* configure.in, m4/az_python.m4: Fix --without-python

Mon Mar 26 17:05:29 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* configure.in, m4/az_python.m4: OS/X changes

Thu Mar 22 00:22:47 CET 2007 Christian Anthon <anthon@kiku.dk>

	* import.c, openurl.c, sound.c, doc/Makefile.am: a few compile fixes
	after previous checkins

Wed Mar 21 00:23:10 CET 2007 Christian Anthon <anthon@kiku.dk>

	* <many>: Sound system cleanup. We now allow only an external command
	or for system that support it: either esound, or win32 sound.

Wed Mar 21 00:21:08 CET 2007 Christian Anthon <anthon@kiku.dk>

	* import.c: Allow import of nackgammon mat files. (thx,  Joerg Picard
	<joerg.picard@gmail.com>)

Tue Mar 20 19:28:06 CET 2007 Christian Anthon <anthon@kiku.dk>
